docs(swagger): add deleteProduct handler docs
